# Three_Elegans

examples/: demo.c
include/: Three_Elegans.h
libs/runtime/: .gitignore  CMakeLists.txt  README.md
libs/runtime/examples/: demo.c
libs/runtime/examples/models/: simple_worm.nn
libs/runtime/examples/models/example/: example.cnn  example.nn
libs/runtime/include/: Three_Elegans.h
libs/runtime/src/: Three_Elegans.c
libs/runtime/src/core/Brain/: Brain.c  Brain.h
libs/runtime/src/core/Loader/: Loader.c  Loader.h
libs/runtime/src/core/Logger/: Logger.c  Logger.h
libs/runtime/src/core/Neurons/: Neurons.c  Neurons.h
libs/runtime/src/core/Synapses/: Synapses.c  Synapses.h
libs/runtime/src/utils/: vector.h
libs/runtime/src/utils/DynamicArray/: DynamicArray.c  DynamicArray.h
libs/runtime/src/utils/Vector/: Vector.c  Vector.h
libs/runtime/src/utils/types/: types.h
src/: Three_Elegans.c
web/: index.html
